--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
+    "name":"testing",
+    "version":"1.0.0",
+    "description": "express testing",
+    "main":"./projetos/server.js",
+    "engines":{"node":"14.x"},
     "author": "",
     "license": "ISC",
     "scripts": {
+        "start":"node server.js",
         "dev": "nodemon server.js",
-        "build": "webpack --progress",
+        "build": "webpack --progress"
     },
     "dependencies": {
         "body-parser": "^1.20.0",
