--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "license": "ISC",
     "scripts": {
         "start":"node server.js",
-        "dev": "nodemon server.js",
-        "build": "webpack --progress"
+        "test": "echo \"Error: no test specified\" && exit 1"
     },
+    "keywords": [],
     "dependencies": {
         "body-parser": "^1.20.0",
         "ejs": "^3.1.8",
