--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
     "name":"testing",
     "version":"1.0.0",
     "description": "express testing",
-    "main":"server.js",
+    "main":"index.js",
     "engines":{"node":"14.x"},
     "author": "",
     "license": "ISC",
     "scripts": {
-        "start":"node server.js",
-        "dev":"nodemon server.js",
+        "start":"node index.js",
+        "dev":"nodemon index.js",
         "test":"echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [],
